tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0240/input.js
function a(t, t) { "use strict"; }
